[package]
name = "s3newbench"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.89.0"
chrono = "0.4.41"
clap = "4.5.39"
elasticsearch = "9.0.0-alpha.1"
hostname = "0.4.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = "1.17.0"
